# tf2-rpc

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix  tf2-rpc.service
docs/: building.md  installing.md  usage.md
nix/: default.nix
scripts/: install.sh  scrape-wiki-images.ts  uninstall.sh
src/: constants.rs  main.rs  monitor.rs  parser.rs  structs.rs  util.rs
