[package]
name = "tf2-rpc"
version = "0.1.0"
edition = "2024"
description = "Discord RPC for Team Fortress 2"
license = "GPL-3.0-only"

# Optimisations
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# Fedora
[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/tf2-rpc", dest = "/usr/bin/tf2-rpc", mode = "755" },
	{ source = "tf2-rpc.service", dest = "/etc/systemd/user/tf2-rpc.service", mode = "644" },
]

# Debian
[package.metadata.deb]
maintainer = "paige <paigely@tuta.io>"
copyright = "2026, paige"
license-file = ["LICENSE", "0"]
extended-description = "Discord RPC for Team Fortress 2"
section = "utility"
priority = "optional"
assets = [
	{ source = "target/release/tf2-rpc", dest = "usr/bin/tf2-rpc", mode = "755" },
	{ source = "tf2-rpc.service", dest = "etc/systemd/user/tf2-rpc.service", mode = "644" },
]

# Winblows
[package.metadata.packager]
product-name = "tf2-rpc"
identifier = "paige.tf2-rpc"
version = "0.1.0"
out-dir = "./dist"
before-packaging-command = "cargo build --release"
binaries = [{ path = "target/release/tf2-rpc.exe", main = true }]

[dependencies]
anyhow = "1"
discord-rich-presence = "1"
linemux = "0.3"
sysinfo = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
a2s = { version = "0.6", features = ["async"] }
futures = "0.3"
mimalloc = { version = "0.1", default-features = false }
